# meetup-scheduler

./: .claude-resume  .gitignore  CLAUDE.md  FUTURE-ISSUES.md  LICENSE.md  Makefile  PLAN.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docs.yml  test.yml
docs/: CNAME  _config.yml  index.md
src/meetup_scheduler/: __init__.py  __main__.py  __version__.py  app.py  metadata.py
src/meetup_scheduler/auth/: __init__.py  oauth.py  server.py  tokens.py
src/meetup_scheduler/commands/: __init__.py  base.py  config_cmd.py  generate_cmd.py  init_cmd.py  login_cmd.py  logout_cmd.py  readme_cmd.py  schedule_cmd.py  sync_cmd.py
src/meetup_scheduler/config/: __init__.py  manager.py
src/meetup_scheduler/meetup/: __init__.py  client.py
src/meetup_scheduler/output/: __init__.py  markdown.py
src/meetup_scheduler/resources/: __init__.py  readme.py
src/meetup_scheduler/resources/schemas/: config.schema.json  events.schema.json  venues.schema.json
src/meetup_scheduler/scheduler/: __init__.py  parser.py  recurrence.py  validator.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_config_cmd.py  test_e2e_schedule.py  test_event_parser.py  test_generate_cmd.py  test_init_cmd.py  test_integration_sync.py  test_login_cmd.py  test_logout_cmd.py  test_markdown_generator.py  test_meetup_client.py  test_oauth.py  test_readme.py  test_recurrence.py  test_schedule_cmd.py  test_schema_validator.py  test_server.py  test_sync_cmd.py  test_tokens.py
tests/fixtures/: sample_config.json  sample_events.json
