[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "meetup-scheduler"
version = "0.1.3"
description = "Batch-create Meetup.com events from JSON specifications"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
authors = [
    { name = "Terry Moore", email = "terry@thethings.nyc" }
]
keywords = ["meetup", "events", "scheduling", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27, ==0.*",
    "jsonschema>=4.20, ==4.*",
    "python-dateutil>=2.8, ==2.*",
    "platformdirs>=4.0, ==4.*",
    "rich>=13.0, ==13.*",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0, ==8.*",
    "pytest-cov>=4.0, ==4.*",
    "pytest-mock>=3.12, ==3.*",
    "respx>=0.21, ==0.21.*",
    "ruff>=0.8, ==0.8.*",
    "mypy>=1.8, ==1.*",
]

[project.scripts]
meetup-scheduler = "meetup_scheduler.__main__:main"

[project.urls]
Homepage = "https://github.com/things-nyc/meetup-scheduler"
Repository = "https://github.com/things-nyc/meetup-scheduler"

[tool.hatch.build.targets.wheel]
packages = ["src/meetup_scheduler"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "meetup_scheduler/resources/README.md"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = true
